# chomp

./: .gitignore  CMakeLists.txt  README.md  setup.py  teste.py  wrapper_test.py
__MACOSX/src/: ._ad_bindings.cpp
docs/: CNAME  index.html
include/: Definitions.h  Expression.h  OpDispatch.h  OpTraits.h  amd.h  back.h  definitions.h  dopt.h  fast_numpy_view.h  filter.h  funnel.h  ip.h  ip_aux.h  ip_helpers.h  ip_soc.h  kkt_core.h  kkt_core_beta.h  kkt_helper.h  kkt_hpv.h  linesearch.h  model.h  optraits.back  osqp.h  piqp.h  presolver.h  qdldl.h  regularizer.h  simplex.h  simplex_aux.h  simplex_lu.h  sqp.h  supernodes.h  tr.h  tr_aux.h  tr_definitions.h  tree.h
include/ad/: ADBindings.h  ADGraph.h  Definitions.h  Expression.h  OpDispatch.h  OpTraits.h  Operators.h  Variable.h  egraph.h  egraph_aux.h
include/simplex/: presolver.h  simplex.h  simplex_aux.h
include/tree/: data_binner.hpp  forest.h  gradient_hist_system.hpp  split_aux.h  split_engine.hpp  split_finder.hpp  split_helpers.h  unified_tree.hpp
l1penalty/: .clang-format  CMakeLists.txt  README.md  errorfile.txt  errors.txt  run.txt
l1penalty/include/: Definitions.hpp  Helpers.hpp  Overloads.hpp  PolynomialVector.hpp  Polynomials.hpp  Solvers.hpp  SolversBase.hpp  TRModel.hpp  l1Fun.hpp  l1Solver.hpp  pointWork.hpp
l1penalty/src/: Helpers.cpp  Overloads.cpp  PolynomialVector.cpp  Solvers.cpp  TRModel.cpp  bindings.cpp  l1Fun.cpp  l1Solver.cpp  main.cpp  pointWork.cpp  simplex
nlp/: README.md  admm.py  amd.py  dfo.py  dfo_aux.py  dfo_fit.py  dfo_model.py  dfo_tr.py  ip.py  ip_aux.py  ip_cg.py  ip_kernels.py  ip_kkt.py  nlp.py  read_apm.py  sqp.py  sqp_dfo.py  sqp_model.py  wrapper.py
nlp/Data_Instances/: hs001.apm  hs002.apm  hs003.apm  hs004.apm  hs005.apm  hs006.apm  hs007.apm  hs008.apm  hs009.apm  hs010.apm  hs011.apm  hs012.apm  hs013.apm  hs014.apm  hs015.apm  hs016.apm  hs017.apm  hs018.apm  hs019.apm  hs020.apm  hs021.apm  hs022.apm  hs023.apm  hs024.apm  hs025.apm  hs026.apm  hs027.apm  hs028.apm  hs029.apm  hs030.apm  hs031.apm  hs032.apm  hs033.apm  hs034.apm  hs035.apm  hs036.apm  hs037.apm  hs038.apm  hs039.apm  hs040.apm  (+79 more)
nlp/blocks/: aux.py  filter.py  linesearch.py  qp.py  reg.py  soc.py  tr.py
nlp/examples/: branin.py  solve_from_apm.py
nlp/legacy/: ip.py  ip_kkt.py  nlp.py  sqp.py  tr.py
nlp/solverdash/: __init__.py  client.py  dashboard.py
src/: ADGraph.cpp  Expression.cpp  Variable.cpp  ad.cpp  ad_bindings.cpp  amdqg_bindings.cpp  chomp.cpp  foreforest.cpp  foretree_pybind.cpp  ip.cpp  kkt_core.cpp  osqp_bindings.cpp  piqp_bindings.cpp  qdldl_bindings.cpp  simplex.h  simplex_bindings.cpp  tr_cpp.cpp
src/ad/: ADGraph.cpp  Expression.cpp  OpDispatch.cpp  Variable.cpp
src/legacy/: tr_cpp.cpp
